--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
         <h2 class="bottle__text" id="shop">Pick a Pretty Bottle</h2>
         <div class="bottle__grid">
           <div class="bottle__grid_item">
-            <img src="/img/bottle1.png" alt="">
+            <img src="img/bottle1.png" alt="">
             <h3>The Daedreamer Set</h3>
             <h4>$49.00</h4>
           </div>
           <div class="bottle__grid_item">
-            <img src="/img/bottle2.png" alt="">
+            <img src="img/bottle2.png" alt="">
             <h3>Shampoo</h3>
             <h4>$24.00 to $64.00</h4>
           </div>
           <div class="bottle__grid_item">
-            <img src="/img/bottle3.png" alt="">
+            <img src="img/bottle3.png" alt="">
             <h3>Conditioner</h3>
             <h4>$24.00 to $64.00</h4>
           </div>
